--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,11 +1,15 @@
 build_image:
-  image: docker
+  image: ubuntu:20.04
   stage: build
   variables:
     IMAGE_TAG: $CI_REGISTRY_IMAGE:$CI_COMMIT_REF_SLUG
   script:
-    - apt -y update && apt install python3-pip
-    - pip install jupyter-repo2docker
+    - apt update && apt-get install apt-transport-https ca-certificates curl gnupg-agent software-properties-common python3-pip
+    - curl -fsSL https://download.docker.com/linux/ubuntu/gpg | apt-key add -
+    - add-apt-repository "deb [arch=amd64] https://download.docker.com/linux/ubuntu $(lsb_release -cs) stable
+    - apt-get update && apt-get install docker-ce docker-ce-cli containerd.io
+    - apt install python3-pip
     - docker login -u $CI_REGISTRY_USER -p $CI_REGISTRY_PASSWORD $CI_REGISTRY
+    - pip3 install jupyter-repo2docker
     - jupyter-repo2docker .
     - docker image ls
