--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -3,8 +3,8 @@ build_image:
   stage: build
   variables:
     IMAGE_TAG: $CI_REGISTRY_IMAGE:$CI_COMMIT_REF_SLUG
+    DEBIAN_FRONTEND: noninteractive
   script:
-    - DEBIAN_FRONTEND=noninteractive
     - apt update && apt-get install -y apt-transport-https ca-certificates curl gnupg-agent software-properties-common python3-pip
     - curl -fsSL https://download.docker.com/linux/ubuntu/gpg | apt-key add -
     - add-apt-repository "deb [arch=amd64] https://download.docker.com/linux/ubuntu $(lsb_release -cs) stable
