--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -4,10 +4,11 @@ build_image:
   variables:
     IMAGE_TAG: $CI_REGISTRY_IMAGE:$CI_COMMIT_REF_SLUG
     DEBIAN_FRONTEND: noninteractive
+    APT_KEY_DONT_WARN_ON_DANGEROUS_USAGE: DontWarn
   script:
     - apt update && apt-get install -y apt-transport-https ca-certificates curl gnupg-agent software-properties-common python3-pip
     - curl -fsSL https://download.docker.com/linux/ubuntu/gpg | apt-key add -
-    - add-apt-repository "deb [arch=amd64] https://download.docker.com/linux/ubuntu $(lsb_release -cs) stable
+    - add-apt-repository "deb [arch=amd64] https://download.docker.com/linux/ubuntu $(lsb_release -cs) stable"
     - apt-get update && apt-get install -y docker-ce docker-ce-cli containerd.io
     - apt install -y python3-pip
     - docker login -u $CI_REGISTRY_USER -p $CI_REGISTRY_PASSWORD $CI_REGISTRY
