--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -6,12 +6,12 @@ build_image:
     DEBIAN_FRONTEND: noninteractive
     APT_KEY_DONT_WARN_ON_DANGEROUS_USAGE: DontWarn
   script:
-    - apt update && apt-get install -y apt-transport-https ca-certificates curl gnupg-agent software-properties-common python3-pip
+    - apt update && apt-get install -y apt-transport-https ca-certificates curl gnupg-agent software-properties-common
     - curl -fsSL https://download.docker.com/linux/ubuntu/gpg | apt-key add -
     - add-apt-repository "deb [arch=amd64] https://download.docker.com/linux/ubuntu $(lsb_release -cs) stable"
     - apt-get update && apt-get install -y docker-ce docker-ce-cli containerd.io
     - apt install -y python3-pip
     - docker login -u $CI_REGISTRY_USER -p $CI_REGISTRY_PASSWORD $CI_REGISTRY
     - pip3 install jupyter-repo2docker
-    - jupyter-repo2docker .
+    - jupyter-repo2docker . --user-id 1000
     - docker image ls
