--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -13,5 +13,6 @@ build_image:
     - apt install -y python3-pip
     - docker login -u $CI_REGISTRY_USER -p $CI_REGISTRY_PASSWORD $CI_REGISTRY
     - pip3 install jupyter-repo2docker
+    - docker run hello-world
     - jupyter-repo2docker --user-id 1000 --user-name nbuser .
     - docker image ls
