--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,11 +1,16 @@
 build:
-  image: docker:19.03.12
+  image: docker:20
   stage: build
   services:
-    - docker:19.03.12-dind
+    - docker:20-dind
   script:
     - docker login -u $CI_REGISTRY_USER -p $CI_REGISTRY_PASSWORD $CI_REGISTRY
     - docker run hello-world
+    - which apk
+    - which apt
+    - which yum
+    - which dpkg
+    - which python
     
 build_image:
   image: ubuntu:20.04
