--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,14 +1,10 @@
-build_image:
-  image: docker:20
-  stage: build
+build_binder_image:
+  image: registry.gitlab.com/gromacs/online-tutorials/binder-builder
   variables:
     IMAGE_TAG: $CI_REGISTRY_IMAGE:$CI_COMMIT_REF_SLUG
   services:
     - docker:20-dind
   script:
-    - docker login -u $CI_REGISTRY_USER -p $CI_REGISTRY_PASSWORD $CI_REGISTRY
-    - apk add python3 py3-pip
-    - pip3 install jupyter-repo2docker
     - jupyter-repo2docker --user-id 1000 --user-name nbuser --no-run --image-name $IMAGE_TAG .
     - echo $IMAGE_TAG
     - docker image ls
