--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -10,7 +10,7 @@ build_binder_image:
     - docker:20-dind
   script:
     # Ensure the runner can re-use old image layers
-    - docker pull $IMAGE_TAG
+    # - docker pull $IMAGE_TAG
     - jupyter-repo2docker --user-id 1000 --user-name nbuser --no-run --image-name $IMAGE_TAG .
     - echo $IMAGE_TAG
     - docker image ls
