--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,5 +1,5 @@
 build_binder_image:
-  image: registry.gitlab.com/gromacs/online-tutorials/binder-builder
+  image: $CI_REGISTRY/gromacs/online-tutorials/binder-builder
   stage: build
   only:
     - web
@@ -8,10 +8,12 @@ build_binder_image:
     IMAGE_TAG: $CI_REGISTRY_IMAGE:$CI_COMMIT_REF_SLUG
   services:
     - docker:20-dind
+  services:
+    - name: $CI_REGISTRY/gromacs/online-tutorials/binder-builder
+      alias: docker
   script:
     # Ensure the runner can re-use old image layers
     # - docker pull $IMAGE_TAG
     - jupyter-repo2docker --user-id 1000 --user-name nbuser --no-run --image-name $IMAGE_TAG .
-    - echo $IMAGE_TAG
     - docker image ls
     - docker push $IMAGE_TAG
