--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,5 +1,5 @@
 build_binder_image:
-  image: $CI_REGISTRY/gromacs/online-tutorials/binder-builder
+  image: registry.gitlab.com/gromacs/online-tutorials/binder-builder
   stage: build
   only:
     - web
@@ -7,10 +7,10 @@ build_binder_image:
   variables:
     IMAGE_TAG: $CI_REGISTRY_IMAGE:$CI_COMMIT_REF_SLUG
   services:
-    - name: $CI_REGISTRY/gromacs/online-tutorials/binder-builder
+    - name: registry.gitlab.com/gromacs/online-tutorials/binder-builder
       alias: docker
   script:
     # Ensure the runner can re-use old image layers where available
-    # - docker pull $IMAGE_TAG > /dev/null && echo "Pulled old image" || echo "No old image to pull"
+    - docker pull $IMAGE_TAG > /dev/null && echo "Pulled old image" || echo "No old image to pull"
     - jupyter-repo2docker --user-id 1000 --user-name nbuser --no-run --image-name $IMAGE_TAG .
     - docker push $IMAGE_TAG
