--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,23 +1,26 @@
 build_binder_image:
-#  image: registry.gitlab.com/gromacs/online-tutorials/binder-builder
-  image: docker:20
-  services:
-    - docker:20-dind
+  image: registry.gitlab.com/gromacs/online-tutorials/binder-builder
+#  image: docker:20
+#  services:
+#    - docker:20-dind
   stage: build
 #  only:
 #    - web
 #    - schedules
   variables:
     IMAGE_TAG: $CI_REGISTRY_IMAGE:$CI_COMMIT_REF_SLUG
-#  services:
-#    - name: registry.gitlab.com/gromacs/online-tutorials/binder-builder
-#      alias: docker
+  services:
+    - name: registry.gitlab.com/gromacs/online-tutorials/binder-builder
+      alias: docker
   script:
-    - apk add python3 py3-pip
-    - pip3 install jupyter-repo2docker
+#    - apk add python3 py3-pip
+#    - pip3 install jupyter-repo2docker
     # Ensure the runner can re-use old image layers where available
     - docker login -u $CI_REGISTRY_USER -p $CI_REGISTRY_PASSWORD $CI_REGISTRY
     - docker pull $IMAGE_TAG > /dev/null && echo "Pulled old image" || echo "No old image to pull"
+    # Build the binder image
     - jupyter-repo2docker --user-id 1000 --user-name nbuser --no-run --image-name $IMAGE_TAG .
+    # Ensure the docker login has not timed out
     - docker login -u $CI_REGISTRY_USER -p $CI_REGISTRY_PASSWORD $CI_REGISTRY
+    # Push the binder image to the registry
     - docker push $IMAGE_TAG
