--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -19,3 +19,5 @@ build_binder_image:
     - docker login -u $CI_REGISTRY_USER -p $CI_REGISTRY_PASSWORD $CI_REGISTRY
     # Push the binder image to the registry
     - docker push $IMAGE_TAG
+    # Update latest to point to new tag
+    - docker push $CI_REGISTRY_IMAGE:latest
