--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -4,13 +4,9 @@ build_binder_image:
     # Published by the parent of the above image
     - docker:20-dind
   stage: build
-  only:
-    -   rules:
-    - if: $CI_COMMIT_TAG
-    - if: $CI_COMMIT_BRANCH
-
-    - web
-    - schedules
+#  only:
+#    - web
+#    - schedules
   variables:
     IMAGE_TAG: $CI_REGISTRY_IMAGE:$CI_COMMIT_REF_SLUG
   script:
