--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -11,6 +11,7 @@ build_binder_image:
   stage: build
   variables:
     IMAGE_TAG: $CI_REGISTRY_IMAGE:$CI_COMMIT_REF_SLUG
+    LATEST_TAG: $CI_REGISTRY_IMAGE:latest
   script:
     # Ensure the runner can re-use old image layers where available
     - docker login -u $CI_REGISTRY_USER -p $CI_REGISTRY_PASSWORD $CI_REGISTRY
@@ -22,4 +23,5 @@ build_binder_image:
     # Push the binder image to the registry
     - docker push $IMAGE_TAG
     # Update latest to point to new tag
-    - docker push $CI_REGISTRY_IMAGE:latest
+    - docker tag $IMAGE_TAG $LATEST_TAG
+    - docker push $LATEST_TAG
