--- a/environment.yml
+++ b/environment.yml
@@ -5,7 +5,7 @@ channels:
   - defaults
 dependencies:
   - gromacs=2021
-  #- gromacs_mpi=2021
+  - gromacs_mpi=2021
   - matplotlib
   - nglview
   - notebook
